--- a/perl6/doc/doc/Language/unicode_entry.pod
+++ b/perl6/doc/doc/Language/unicode_entry.pod
@@ -15,6 +15,24 @@ General information about entering unicode under various operating systems
 and environments can be found on the Wikipedia L<unicode input
 page|https://en.wikipedia.org/wiki/Unicode_input>.
 
+=head1 XCompose
+
+Xorg includes digraph support using a
+L<I<Compose key>|https://en.wikipedia.org/wiki/Compose_key#GNU.2FLinux> .  
+The default of C<AltGr + Shift> can be remapped to something easier such as
+C<Capslock>. In I<GNOME 2> and I<MATE> this can be setup under
+C<Preferences → Keyboard → Layouts → Options → Position of Compose Key>.  
+So, for example, to input C<»+«> you could type
+C<< CAPSLOCK > > + CAPSLOCK < < >>
+
+I<XCompose> allows customising the digraph sequences using a C<.XCompose>
+file and
+L<https://github.com/kragen/xcompose/blob/master/dotXCompose> is an extremely
+complete one. In I<GNOME>, I<XCompose> was overridden and replaced with a
+hardcoded list, but it is possible to restore I<XCompose> by setting
+C<GTK_IM_MODULE=xim> in your environment. It might be necessary to install
+a xim bridge as well, such as C<uim-xim>.
+
 =head1 Editors and shells
 
 =head2 Vim
@@ -42,18 +60,46 @@ characters|http://vim.wikia.com/wiki/Entering_special_characters>.
 =head2 Emacs
 
 In L<Emacs|http://www.gnu.org/software/emacs/>, unicode characters are
-entered by first entering the chord C<Ctrl-x 8 Enter> at which point the
-text C<Unicode (name or hex):> appears in the mode line.  One then enters
+entered by first entering the chord C<C-x 8 RET> at which point the
+text C<Unicode (name or hex):> appears in the minibuffer.  One then enters
 the unicode code point hexadecimal number followed by the enter key.  The
 unicode character will now appear in the document.  Thus, to enter the Greek
-letter λ (lambda), one uses the following key combination (whitespace has
-been added between the commands for clarity):
+letter λ (lambda), one uses the following key combination:
 
-    Ctrl-x 8 Enter 3bb Enter
+    C-x 8 RET 3bb RET
 
 Further information about unicode and its entry into Emacs can be found on
 the L<Unicode Encoding Emacs wiki
 page|http://www.emacswiki.org/emacs/UnicodeEncoding>.
+
+You can also use L<RFC 1345|https://tools.ietf.org/html/rfc1345> character
+mnemonics by typing:
+
+    C-x RET C-\ rfc1345 RET
+
+Or C<C-u C-\ rfc1345 RET>.
+
+To type special characters, type C<&> followed by a mnemonic.
+Emacs will show the possible characters in the echo area.
+For example, Greek letter λ (lambda) can be entered by typing:
+
+    &l*
+
+You can use C<C-\> to toggle L<input method|https://www.gnu.org/software/
+emacs/manual/html_node/emacs/Select-Input-Method.html>.
+
+Another L<input method|http://www.emacswiki.org/emacs/InputMethods>
+you can use to insert special characters is
+L<TeX|http://www.emacswiki.org/emacs/TeXInputMethod>.
+Select it by typing C<C-u C-\ TeX RET>. You can enter a special character
+by using a prefix such as C<\>. For example, to enter λ, type:
+
+    \lambda
+
+To view characters and sequences provided by an input method,
+run the C<describe-input-method> command:
+
+    C-h I TeX
 
 =head2 Unix shell
 
