--- a/perl6/doc/doc/Type/Dateish.pod
+++ b/perl6/doc/doc/Type/Dateish.pod
@@ -20,7 +20,7 @@ Defined as:
 
 Usage:
 
-    DATEISH.year
+    Dateish.year
 
 Returns the year of the date
 
@@ -32,7 +32,7 @@ Defined as:
 
 Usage:
 
-    DATEISH.month
+    Dateish.month
 
 Returns the month of the date (1..12)
 
@@ -44,10 +44,27 @@ Defined as:
 
 Usage:
 
-    DATEISH.day
+    Dateish.day
 
 Returns the day of the month of the date (1..31)
 
+=head2 method formatter
+
+Defined as:
+
+    method formatter(DateTime:D:)
+
+Usage:
+
+    Dateish.formatter
+
+Returns the formatting function which is used for conversion to
+L<Str|/type/Str>. If none was provided at object construction, a
+default formatter is used.  In that case the method will return a
+Callable type object.
+
+The formatting function is called by L<#method Str> with the invocant as its
+only argument.
 
 =head2 method is-leap-year
 
@@ -57,7 +74,7 @@ Defined as:
 
 Usage:
 
-    DATEISH.is-leap-year(YEAR?)
+    Dateish.is-leap-year(YEAR?)
 
 Returns C<True> if C<$year> is a leap year. Can be called as a class method
 if the year is provided.
@@ -70,7 +87,7 @@ Defined as:
 
 Usage:
 
-    DATEISH.day-of-month
+    Dateish.day-of-month
 
 Returns the day of the month of the date (1..31). Synonymous to the C<day>
 method.
@@ -83,7 +100,7 @@ Defined as:
 
 Usage:
 
-    DATEISH.day-of-week
+    Dateish.day-of-week
 
 Returns the day of the week, where 1 is Monday, 2 is Tuesday and Sunday is 7.
 
@@ -95,7 +112,7 @@ Defined as:
 
 Usage:
 
-    DATEISH.day-of-year
+    Dateish.day-of-year
 
 Returns the day of the year (1..366).
 
@@ -107,7 +124,7 @@ Defined as:
 
 Usage:
 
-    DATEISH.days-in-month(YEAR?, MONTH?)
+    Dateish.days-in-month(YEAR?, MONTH?)
 
 Returns the number of days in a month, where year and month default to that
 of the invocant. If both year and month are provided, it can be called as
@@ -121,7 +138,7 @@ Defined as:
 
 Usage:
 
-    DATEISH.week
+    Dateish.week
 
 Returns a list of two integers: the year, and the week number. This is because
 at the start or end of a year, the week may actually belong to the other year.
