--- a/perl6/doc/doc/Language/about.pod
+++ b/perl6/doc/doc/Language/about.pod
@@ -10,10 +10,10 @@ navigate, and useful to both newcomers and experienced Perl 6
 programmers.
 
 An HTML version of the documentation is located online at
-L<http://doc.perl6.org>.
+L<https://doc.perl6.org>.
 
 The official source for this documentation is located at L<perl6/doc on
-GitHub|http://github.com/perl6/doc>.
+GitHub|https://github.com/perl6/doc>.
 
 =head1 Structure
 
@@ -29,7 +29,7 @@ Generating this documentation requires:
 =item A recent version of the Rakudo Perl 6 compiler
 
 =item The Perl 6 modules Pod::To::HTML and URI::Escape (can be installed
-via L<panda|http://github.com/tadzik/panda>)
+via L<panda|https://github.com/tadzik/panda>)
 
 =item B<Optional>: L<GraphViz|http://graphviz.org>, for creating graphs
 of the relationships between Perl 6 types
