--- a/perl6/doc/doc/Language/containers.pod
+++ b/perl6/doc/doc/Language/containers.pod
@@ -123,7 +123,7 @@ changes the contents of the other.
 You've seen this situation before: it is exactly what happened with the
 signature parameter marked as C<is rw>.
 
-Sigilless variabes also bind by default and so do parameters with the trait C<is raw>.
+Sigilless variables also bind by default and so do parameters with the trait C<is raw>.
 
     my $a = 42;
     my \b = $a;
@@ -229,7 +229,7 @@ a thing happening accidentally.
 The C<%> and C<@> sigils in Perl 6 generally indicate multiple values
 to an iteration construct, whereas the C<$> sigil indicates only one value.
 
-    my @a = 1, 2 3;
+    my @a = 1, 2, 3;
     for @a { };         # 3 iterations
     my $a = (1, 2, 3);
     for $a { };         # 1 iteration
@@ -273,7 +273,7 @@ maps over a list of three elements, not of one.
 To provide custom containers Perl 6 provides the class C<Proxy>. It takes two
 methods that are called when values are stored or fetched from the container.
 Type checks are not done by the container itself and other restrictions like
-readonlyness can be broken. The returned value must therefor be of the same
+readonlyness can be broken. The returned value must therefore be of the same
 type then the type of the variable it is bound to. We can use type captures to
 work with types in Perl 6.
 
