--- a/perl6/doc/doc/Language/syntax.pod
+++ b/perl6/doc/doc/Language/syntax.pod
@@ -389,6 +389,16 @@ When assigning to a C<%> sigil variable, the curly braces are optional.
 
     my %ages = fred => 23, jean => 87, ann => 4;
 
+By default keys in C<{ }> are forced to strings. To compose a hash with
+non-string keys, use a colon prefix:
+
+    my $when = :{ (now) => "Instant", (DateTime.now) => "DateTime" };
+
+Note that with objects as keys, you cannot access non-string keys as strings:
+
+    :{ -1 => 41, 0 => 42, 1 => 43 }<0>  # Any
+    :{ -1 => 41, 0 => 42, 1 => 43 }{0}  # 42
+
 =head3 Regex literals
 
 A L<Regex|/type/Regex> is declared with slashes like C</foo/>. Note that this C<//> syntax is shorthand for the full C<rx//> syntax.
@@ -398,6 +408,24 @@ A L<Regex|/type/Regex> is declared with slashes like C</foo/>. Note that this C<
     Q :regex /foo/ # Even longer version
 
     my $r = /foo/; # Regexes can be assigned to variables
+
+=head3 Signature literals
+
+Signatures can be used standalone for pattern matching, in addition to the
+typical usage in sub and block declarations. A standalone signature is declared
+starting with a colon:
+
+    say "match!" if 5, "fish" ~~ :(Int, Str) #=> match!
+
+    my $sig = :(Int $a, Str);
+    say "match!" if (5, "fish") ~~ $sig; #=> match!
+
+    given "foo", 42 {
+      when :(Str, Str) { "This won't match" }
+      when :(Str, Int $n where $n > 20) { "This will!" }
+    }
+
+See the L<Signatures|/type/Signature> documentation for more about signatures.
 
 =head2 Declarations
 
@@ -471,6 +499,11 @@ See L<functions|/language/functions>.
     &f.(); # Same as above, needed to make the following work
     my @functions = ({say 1}, {say 2}, {say 3});
     @functions>>.();
+
+    # Method invocation. Object (instance) is $person, method is set-name-age
+    $person.set-name-age('jane', 98);  # Most common way
+    $person.set-name: 'jane', 98;      # Precedence drop
+    set-name($person: 'jane', 98);     # Invocant marker
 
 =head1 Operators
 
