--- a/perl6/doc/doc/Type/Any.pod
+++ b/perl6/doc/doc/Type/Any.pod
@@ -136,7 +136,11 @@ Examples:
 
 =head2 method flat
 
-Interprets the invocant as a list, flattens it, and returns that list.
+Interprets the invocant as a list, flattens it, and returns that list. Please
+note that C<.flat> will not solve the halting problem for you. If you flat
+an infinite list C<.flat> may return that infinite list, eating all your RAM
+in the process. Further, C<say> is not a good way to test lists because it will
+truncate after 100 elements.
 
     say ((1, 2), (3)).elems;        # 2
     say ((1, 2), (3)).flat.elems;   # 3
