--- a/perl6/doc/doc/Type/Blob.pod
+++ b/perl6/doc/doc/Type/Blob.pod
@@ -86,6 +86,11 @@ part of the invocant buffer you would like:
 
 =head2 method unpack
 
+This method is considered B<experimental>, in order to use it you will need to do:
+
+    use experimental :pack;
+
+
 Defined as:
 
     method unpack(Blob:D: $template) returns List:D
@@ -128,6 +133,11 @@ The following letters are recognized:
 =end table
 
 =head2 sub pack
+
+This subroutine is considered B<experimental>,  in order to use it you will need to do:
+
+    use experimental :pack;
+
 
     sub pack(Str $template, *@items) returns Buf
 
