--- a/perl6/doc/doc/Type/Callable.pod
+++ b/perl6/doc/doc/Type/Callable.pod
@@ -9,6 +9,19 @@
 Role for objects which support calling them. It's used in L<Block>,
 L<Routine>, L<Sub>, L<Method>, L<Submethod> and L<Macro> types.
 
+Callables can be stored in C<&>-sigiled containers, the default type constrain
+if such a container is C<Callable>. A signature object can be used to
+force a check against the signature of the Callable to be stored into the
+congtainer.
+
+	my &a = {};
+	my &b = -> {};
+	my &c = sub () {};
+	sub foo () {};
+	my &d = &foo;
+	my &f:(Int) = sub bar (Int) {};
+	my &f:(Str) = -> Str {};
+
 =head1 Methods
 
 =head2 method assuming
