--- a/perl6/doc/doc/Type/Cool.pod
+++ b/perl6/doc/doc/Type/Cool.pod
@@ -1,6 +1,6 @@
 =begin pod
 
-=TITLE Cool
+=TITLE class Cool
 
 =SUBTITLE Value that can be treated as a string or number interchangeably
 
@@ -73,6 +73,7 @@ what type they coerce to:
     chars           Str
     fmt             Str
     uniname         Str
+    uninames        Seq
     unival          Str
     univals         Str
     uniprop         Str
@@ -894,11 +895,33 @@ Defined as:
 
 Usage:
 
-    uniname STRING
-    STRING.uniname
+    # Camelia in Unicode
+    say ‘»ö«’.comb».uniname;
+    # «("RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK",
+        "LATIN SMALL LETTER O WITH DIAERESIS", "LEFT-POINTING DOUBLE ANGLE QUOTATION MARK")␤»
+
+    # Find the char with the longest Unicode name.
+    say (0..0x1FFFF).sort(*.uniname.chars)[*-1].chr.uniname;
+    # «ARABIC LIGATURE UIGHUR KIRGHIZ YEH WITH HAMZA ABOVE WITH ALEF MAKSURA INITIAL FORM␤»
 
 Interprets the invocant / first argument as a L</type/Str>, and returns the
-Unicode codepoint name of the first character.
+Unicode codepoint name of the first character. To convert a whole string use L<uninames|#routine_uninames>.
+
+=head2 routine uninames
+
+Defined as:
+
+    sub uninames(Str:D)
+    method uninames()
+
+Usage:
+
+    dd ‘»ö«’.comb».uniname;
+    # «("RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK",
+        "LATIN SMALL LETTER O WITH DIAERESIS",
+        "LEFT-POINTING DOUBLE ANGLE QUOTATION MARK").Seq␤»
+
+Returns of a Seq of unicode names for the Str provided.
 
 =head2 routine chop
 
@@ -1207,12 +1230,34 @@ Coerces the invocant to L<IO::Path>.
 
     .say for '.'.IO.dir;        # gives a directory listing
 
+=head2 routine EVAL
+
+Defined as:
+
+    sub EVAL(Cool $code, :$lang = { ... })
+
+Usage:
+
+    EVAL "say 'hello'";
+
+Coerces the invocant to L<Str>.
+
+This works as-is with a literal string parameter. If you have a more complex
+input, such as a variable or string with embedded code, you must enable the
+C<MONKEY-SEE-NO-EVAL> pragma:
+
+    use MONKEY-SEE-NO-EVAL;
+    EVAL "say { 5 + 5 }";
+
+C<EVAL> is also a gateway for executing code in other languages:
+
+    EVAL "use v5.20; say 'Hello from perl5!'", :lang<Perl5>;
+
 =begin comment
 
 TODO: sech, asech, cosech, acosech, cotanh, acotanh, cis,
 unpolar, fmt, substr-rw, trans,
-match, subst, sprintf, printf, samecase,
-EVAL
+match, subst, sprintf, printf, samecase
 
 =end comment
 
