--- a/perl6/doc/doc/Type/IO.pod
+++ b/perl6/doc/doc/Type/IO.pod
@@ -111,6 +111,18 @@ to the standard error stream.
 This is in spirit similar to Perl 5's L<Data::Dumper
 module|http://perldoc.perl.org/Data/Dumper.html>.
 
+Please note that C<dd> will ignore named parameters. You can use a capture to
+force it to dump everything passed to it.
+
+    dd \((:a(1), :b(2)), :c(3));
+
+If you don't specify any parameters at all, it will just print the type and
+name of the current subroutine / method to the standard error stream:
+
+    sub a { dd }; a    # sub a
+
+This can be handy as a cheap trace function.
+
 =head2 sub prompt
 
     sub prompt($msg)
