git subrepo clone --force git://github.com/dnmfarrell/Module-Minter.git dnmfarrell/Module-Minter
subrepo:
  subdir:   "dnmfarrell/Module-Minter"
  merged:   "615c6c9"
upstream:
  origin:   "git://github.com/dnmfarrell/Module-Minter.git"
  branch:   "master"
  commit:   "615c6c9"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/dnmfarrell/Module-Minter/README.pod
+++ b/dnmfarrell/Module-Minter/README.pod
@@ -16,6 +16,10 @@ Or use a different directory and the FreeBSD license:
 
 David Farrell L<PerlTricks.com|http://perltricks.com>
 
+=head2 SEE ALSO
+
+L<Software::License>
+
 =head2 LICENSE
 
 FreeBSD, see LICENSE
