git subrepo clone --force git://github.com/p6-pdf/perl6-Font-AFM.git p6-pdf/perl6-Font-AFM
subrepo:
  subdir:   "p6-pdf/perl6-Font-AFM"
  merged:   "6da36da"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-Font-AFM.git"
  branch:   "master"
  commit:   "6da36da"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/p6-pdf/perl6-Font-AFM/Changes
+++ b/p6-pdf/perl6-Font-AFM/Changes
@@ -7,7 +7,7 @@
      it to a singular method which calls a multi method
 
    Release 1.23.1
-   Replaced dynamic Pand Build.pm with semi-static make_metrics.pl.
+   Replaced dynamic Panda Build.pm with semi-static etc/make-metrics.pl.
    - generated AFM files should seldom change. build-time generation of modules
      was overkill. generated sources are now checked in, and can be occasionally
      regenerated, when needed.
