git subrepo clone --force git://github.com/p6-pdf/perl6-PDF-Tools.git p6-pdf/perl6-PDF-Tools
subrepo:
  subdir:   "p6-pdf/perl6-PDF-Tools"
  merged:   "1523dce"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-PDF-Tools.git"
  branch:   "master"
  commit:   "1523dce"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/p6-pdf/perl6-PDF-Tools/Changes
+++ b/p6-pdf/perl6-PDF-Tools/Changes
@@ -1,3 +1,7 @@
+    Release 0.0.4
+    - encryption generation is now supported. RC4 (Encryption revisions 1-4)
+      only at this stage. 
+
     Release 0.0.3
     - [PDF::DAO::Util] from-ast() sub now handles cyclical hashes and arrays
 
